Fix point header wrapping
no longer built up of multiple blocks that don't flow properly

--- a/JournalApp/wwwroot/app.css
+++ b/JournalApp/wwwroot/app.css
@@ -72,9 +72,7 @@ button {
 }
 
 .data-point-header {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
+	word-wrap: anywhere;
 }
 
 .data-point-view {
